# pollu

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pyproject.toml  tag_rules.json  test_single_date.txt
data/mumbai/: grid_manifest.json  transform.json
docs/: project_execution_guide.md  svf_implementation_notes.md  svf_resolution_guide.md
dwarka/: model.py
nalanda/: __init__.py  aggregate.py  assemble_static.py  precompute.py
patliputra/: aggregate_osm_dust_30m.py  evi_signals.py  ingest.py  landsat8_image_dates.txt  landsat8_signals.py  openaq_pm25.py  openmeteo_fetch.py  s5p_no2_signals.py  sentinel2_low_cloud_dates.txt  svf_earth_engine.py  utils.py
patliputra/backends/: __init__.py  earthengine.py
patliputra/signals/: __init__.py  base.py
patliputra/utils/: landsat8_signals.py  raster_sampling.py
scripts/: aggregate_osm_industrial_30m.py  check_ee_init.py  create_grid_mumbai.py  download_and_process_landsat.py  fetch_all_openaq_sensor_ids.py  fetch_landsat56.py  find_missing_sentinel_dates.py  interpolate_pm25.py  list_clear_images.py  migrate_landsat_batch.ps1  migrate_old_parquets.py  sample_svf_to_grid.py  sentinel2_low_cloud_dates.py  test_export_drive.py  validate_dsm.py  validate_grid_match.py  validate_osm_dust_parquet.py  validate_osm_industrial_parquet.py  validate_parquet.py
src/nalanda/: disk_seq.h  edge.h  graph_constants.h  node.h  osm_structures.h  osmdata.h  osmnode.h  osmway.h  uniquenames.h
src/takshashila/: graphbuilder.cpp  graphbuilder.h  pbf_reader.cpp  pbf_reader.h  pbfgraphparser.cpp  pbfgraphparser.h  tag_rules.cpp  tag_rules.h  util.cpp  util.h
takshashila/: db.py
tests/: test_dwarka.py  test_validate_grid.py  validate_cache_parquets.py  validate_dsm.py  validate_landsat8_evi.py  validate_landsat_parquets.py  validate_migrations.py  validate_openaq.py  validate_openmeteo.py  validate_parquet.py  validate_precompute_outputs.py  validate_precomputed_neighbors.py  validate_sentinel_mapping.py  validate_svf.py
ujjayini/: main.py
